# ros-useful-tools

./: .gitignore  CMakeLists.txt  README.md  package.xml
check_rosbag2/: README.md  check_rosbag2.sh
compress_rosbag2/: README.md  compress_rosbag2.sh
down_ros2/: README.md  down_ros2.sh
launch/: rosbag2_recorder_launch.launch.py  rosbag2_script_record_launch.launch.xml
load_rosbag2_py/: README.md
nuscenes_rosbag/: Dockerfile  README.md
nuscenes_rosbag/scripts/: main.py
record_rosbag2/launch/: rosbag2_all_topic_record_launch.launch.py  rosbag2_script_record_launch.launch.py
record_rosbag2/scripts/: rosbag2_record.sh
reindex_rosbag2/: README.md  reindex_rosbag2.sh
remake_rosbag2/: README.md  remake_rosbag2.sh
remap_rosbag/: README.md
remap_rosbag2/: README.md  remap_rosbag2.sh
rosbag2_compress/: README.md  rosbag2_compress.sh
rosbag2_loader/: pyproject.toml  rosbag2_loader.py
rosbag2_loader/rosbag2_loader/: example.py
rosbag2_recorder/: CMakeLists.txt  README.md
rosbag2_recorder/config/: topic_list.txt
rosbag2_recorder/launch/: rosbag2_config_record_launch.launch.py
rosbag_remap/: README.md
scripts/: rogbag2_record.sh  rosbag2_compress.sh  rosbag_remap.sh
