
[tool.poetry]
name = "rosbag2-loader-py"
version = "0.1.0"
description = ""
authors = ["scepter914 <scepter914@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
